app/globals.css
@import "maplibre-gl/dist/maplibre-gl.css";

@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body {
  height: 100%;
}

html.dark {
  color-scheme: dark;
}

body {
  @apply bg-slate-100 text-ink antialiased dark:bg-slate-900 dark:text-slate-100;
}

.scrollbar-thin::-webkit-scrollbar {
  width: 8px;
}
.scrollbar-thin::-webkit-scrollbar-thumb {
  @apply rounded-full bg-slate-300 dark:bg-slate-600;
}

